<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activitys.RecuperarContrasenia"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_recuperarcontrasenia"
        android:layout_gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recuperar_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/s_correo" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/recuperar_btn_recuperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_recuperar"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"/>
</LinearLayout>